# text-2-image

./: .gitignore  LICENSE  README.md  docker-compose.yc.yaml  docker-compose.yml  pyproject.toml  requirements.dev.txt
.github/workflows/: yandex-cloud.yml
nginx/: Dockerfile  nginx.yc.conf  start-nginx.sh
src/backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.dev.txt  requirements.txt
src/backend/text_to_image/: __init__.py
src/backend/web/: main.py
src/frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
src/frontend/public/: index.html
src/frontend/src/: App.tsx  common.css  index.tsx
src/text_to_image/: __init__.py  image_format.py  image_mode.py  to_image.py  to_image.pyi  to_text.py  to_text.pyi
src/text_to_image/domain/: __init__.py  text_image.py  text_image_loader.py  text_image_saver.py
src/text_to_image/pil_text_image_loader/: __init__.py  create_text_image_loader.py  pil_text_image_loader.py  png_pil_text_image_loader.py
src/text_to_image/pil_text_image_saver/: __init__.py  create_text_image_saver.py  image_mode.py  pil_text_image_saver.py  png_pil_text_image_saver.py
src/text_to_image/text_image_saver/: __init__.py  pil_text_image_saver.py
src/web/: app.py  main.py
src/web/dependencies/: __init__.py  get_text_image_loader.py  get_text_image_loader_factory.py  get_text_image_saver.py  get_text_image_saver_factory.py
tests/: test_convert.py  test_to_image.py
tests/domain/: test_convert.py
tests/to_image/: test_to_image.py
yandex-cloud/: docker-compose.yc.yaml  user-data.yaml
(+49 files in other folders)
