[tool.poetry]
name = "text-2-image"
version = "0.1.0"
description = ""
authors = ["ash.blade <ashen.blade.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "text_2_image"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
