[tool.poetry]
name = "text-2-image"
version = "0.1.0"
description = ""
authors = ["ash.blade <ashen.blade.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "text_2_image"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"
Pillow = "^9.2.0"


[tool.poetry.group.dev.dependencies]
mypy = "^0.981"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
